--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
+    
+    <!-- Meta tags para CSRF -->
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!-- Fragmento de navegación -->
@@ -24,10 +28,17 @@
                     <i class="bi bi-list-ul me-1"></i>
                     Lista de Alumnos
                 </a>
-                <a class="nav-link" th:href="@{/alumnos/nuevo}">
+                <a sec:authorize="hasAuthority('CREAR_ALUMNOS')" class="nav-link" th:href="@{/alumnos/nuevo}">
                     <i class="bi bi-person-plus me-1"></i>
                     Nuevo Alumno
                 </a>
+                <form th:action="@{/logout}" method="post" class="d-inline">
+                    <button class="btn btn-link nav-link logout-btn" type="submit">
+                        <i class="bi bi-box-arrow-right me-1"></i>
+                        Cerrar sesión
+                    </button>
+                </form>
+
             </div>
         </div>
     </nav>
